grasshopper jump analysis pipeline, figs, data

--- a/preliminary_analysis/prelim_analysis.ipynb
+++ b/preliminary_analysis/prelim_analysis.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preliminary Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -20,6 +27,20 @@
    "outputs": [],
    "source": [
     "jumps = pd.read_csv('grasshopper_distances.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distribution of Jumping Distances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Individual distributions."
    ]
   },
   {
@@ -45,6 +66,13 @@
     "    leg.append('$I_{'+str(i+1)+'}$')\n",
     "fig.legend(leg); plt.xlabel('$Distance\\ (cm)$')\n",
     "plt.savefig('jump-dist',dpi = 300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pooled distribution."
    ]
   },
   {
@@ -98,6 +126,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Escape Trajectories"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Polar plot of escape trajectories. $0^\\circ$ represents direction of predator approach."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -126,6 +168,13 @@
     "ax.set_yticklabels([10,20,30,40,50],color = 'k')\n",
     "plt.ylim([0,60])\n",
     "plt.savefig('jump-trajectories',dpi = 300);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Polar distribution of escape angles with respect to predator. $0^\\circ$ represents direction of predator approach."
    ]
   },
   {
